--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </title>
 
 <body>
-	new file adding new chnages into the features branch 
+	new  the features branch file adding new chnages into
 </body>
 </html>
